# PROYECTOFINAL_TERMINALES

./: CMakeLists.txt  errores.txt  protocol_old.c  sdkconfig  tester.py  wifi_tester.py
main/: CMakeLists.txt  DIO.c  DIO.h  PCF8574.c  PCF8574.h  SEAII.c  SEAII.h  app_NFC.c  app_NFC.h  app_uart.h  app_wifi.c  app_wifi.h  camara.c  camara.h  config.h  idf_component.yml  main.c  protocol.c  protocol.h
